--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@
 }
 
 @media (max-width: 768px) {
-.top-content { text-align: center;
+
+  .top-content { 
+    text-align: center;
 }
+
 }
 .centered-main-page-element {
   display: block;
@@ -114,7 +117,7 @@ li > label {
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 button.delete img {
