--- a/style.css
+++ b/style.css
@@ -49,11 +49,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
-input,button{
+input,
+button{
   outline: none;
 }
 
@@ -139,32 +141,32 @@ li > input[type="text"] {
   width: 226px;
 }
 
-.delete img {
+.delete > img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.delete img:hover {
+.delete > img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks label {
+#completed-tasks > label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+ul > li > input[type="text"] {
   display: none;
 }
 
-.edit-mode input[type="text"] {
+.edit-mode > input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode label {
+.edit-mode > label {
   display: none;
 }
