--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ button:hover {
 
 /* Heading */
 h3,
-label[for="new-task"] {
+.new-task-label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +85,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,12 +98,12 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task-label {
   display: block;
   margin: 0 0 20px;
 }
@@ -126,7 +126,7 @@ li > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.input-checkbox {
   margin: 0 10px;
 }
 
@@ -137,7 +137,7 @@ li > label {
   width: 226px;
 }
 
-li > input[type="text"] {
+.input-task {
   width: 226px;
 }
 
@@ -158,11 +158,11 @@ li > input[type="text"] {
 }
 
 /* Edit Task */
-ul > li > input[type="text"] {
+ul > li > .input-task {
   display: none;
 }
 
-.edit-mode > input[type="text"] {
+.edit-mode > .input-task {
   display: inline-block;
   width: 224px;
 }
