--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -69,12 +69,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
+.todo-header,
 .new-task-label {
   color: #333;
   font-weight: 700;
@@ -85,7 +85,7 @@ h3,
   text-transform: uppercase;
 }
 
-input {
+.input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,7 +98,7 @@ input {
   color: #888;
 }
 
-input:focus {
+.input:focus {
   color: #333;
 }
 
@@ -113,7 +113,7 @@ input:focus {
 }
 
 /* Task list */
-li {
+.edit-mode {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -122,7 +122,7 @@ li {
   align-items: center;
 }
 
-li > * {
+.edit-mode > * {
   vertical-align: middle;
 }
 
@@ -130,7 +130,7 @@ li > * {
   margin: 0 10px;
 }
 
-li > label {
+.edit-mode > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
@@ -158,7 +158,7 @@ li > label {
 }
 
 /* Edit Task */
-ul > li > .input-task {
+.input-task {
   display: none;
 }
 
