--- a/style.css
+++ b/style.css
@@ -5,30 +5,30 @@
   font-family: Lato, sans-serif;
 }
 
-.header-content {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.header-content img {
+.header img {
   width: 100%;
 }
 
-.header-content .header-content__more-inf {
+.header__more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
 
-  .header-content { 
+  .header { 
     text-align: center;
 }
 
 }
 
-.main-content {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -75,7 +75,7 @@ button {
 
 /* Heading */
 .todo-header,
-.main-content__add-element__new-task-label{
+.main__add-element__new-task-label{
   color: #333;
   font-weight: 700;
   font-size: 15px;
