--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 
 .header__more-inf {
   font-family: fantasy, cursive;
+  margin-bottom: -10px;
 }
 
 @media (max-width: 768px) {
@@ -34,10 +35,8 @@
   margin: 0 auto 0;
 }
 
-.task {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
+.main__add-element{
+  margin-top: 13px;
 }
 
 .main__task-row-wrapper{
@@ -67,6 +66,7 @@ h3 {
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
+  margin-top: -22px;
 }
 
 .main__incomplete-tasks__edit__button-edit:hover {
@@ -81,8 +81,9 @@ h3 {
   font-size: 15px;
   border-bottom: 2px solid #333;
   padding: 30px 0 10px;
-  margin: 0;
+  margin: 0 0 20px;
   text-transform: uppercase;
+  display: block;
 }
 
 .main__incomplete-tasks__edit__input-task {
@@ -109,7 +110,18 @@ h3 {
 }
 
 .main__task-row-wrapper__input-task {
-  width: 318px;
+  width: 420px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 18px;
+  height: 19px;
+  padding: 0 9px;
+  border: 1px solid #dDd;
+  background: #FFF;
+  border-radius: 6px;
+  font-family: Lato, sans-serif;
+  color: #888;
+  margin-bottom: 22px;
 }
 
 /* Task list */
@@ -137,10 +149,6 @@ h3 {
   width: 226px;
 }
 
-.main__task-row-wrapper__input-task {
-  width: 226px;
-}
-
 .main__incomplete-tasks__edit__button-remove > .main__incomplete-tasks__edit__button-remove__img {
   height: 2em;
   transform: rotateZ(45deg);
@@ -158,10 +166,6 @@ h3 {
 }
 
 /* Edit Task */
-.main__task-row-wrapper__input-task {
-  display: none;
-}
-
 .main__incomplete-tasks__edit > .main__incomplete-tasks__edit__input-task {
   display: inline-block;
   width: 224px;
