--- a/style.css
+++ b/style.css
@@ -40,10 +40,6 @@ body {
   flex-grow: 1;
 }
 
-.task-row-wrapper {
-  display: flex;
-}
-
 ul {
   margin:0;
   padding: 0px;
@@ -75,7 +71,7 @@ button:hover {
 
 /* Heading */
 h3,
-label [for="new-task"] {
+label[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -85,7 +81,7 @@ label [for="new-task"] {
   text-transform: uppercase;
 }
 
-input [type="text"] {
+input[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,12 +94,12 @@ input [type="text"] {
   color: #888;
 }
 
-input [type="text"]:focus {
+input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label [for="new-task"] {
+label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
@@ -126,7 +122,7 @@ li > * {
   vertical-align: middle;
 }
 
-li > input [type="checkbox"] {
+li > input[type="checkbox"] {
   margin: 0 10px;
 }
 
@@ -137,7 +133,7 @@ li > label {
   width: 226px;
 }
 
-li > input [type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 
@@ -158,15 +154,15 @@ ul#completed-tasks label {
 }
 
 /* Edit Task */
-ul li input [type="text"] {
+ul li input[type="text"] {
   display: none;
 }
 
-ul li.editmode input [type="text"] {
+ul li.edit-mode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editmode label {
+ul li.edit-mode label {
   display: none;
 }
