--- a/style.css
+++ b/style.css
@@ -12,13 +12,12 @@
   text-align: right;
 }
 
-.header > .header__img {
+.header__img {
   width: 100%;
 }
 
 .header__more-inf {
   font-family: fantasy, cursive;
-  margin-bottom: -10px;
 }
 
 @media (max-width: 768px) {
@@ -27,7 +26,7 @@
     text-align: center;
 }
 
-}
+} 
 
 .main {
   display: block;
@@ -35,30 +34,29 @@
   margin: 0 auto 0;
 }
 
-.main__add-element{
-  margin-top: 13px;
-}
-
-.main__task-row-wrapper{
-  display: flex;
+.task {
+  width: 69%;
+  display: inline-block;
+  flex-grow: 1;
 }
 
 ul {
-  margin: 0;
+  margin:0;
   padding: 0px;
 }
 
-li,
-h3 {
+li, 
+.main__heading-title {
   list-style: none;
 }
 
-.main__incomplete-tasks__edit__input-checkbox,
-.main__incomplete-tasks__edit__button-edit {
+input,
+button{
   outline: none;
 }
 
-.main__incomplete-tasks__edit__button-edit {
+.edit,
+.delete {
   background: none;
   border: 0px;
   color: #888;
@@ -66,27 +64,29 @@ h3 {
   width: 60px;
   font-family: Lato, sans-serif;
   cursor: pointer;
-  margin-top: -22px;
 }
 
-.main__incomplete-tasks__edit__button-edit:hover {
+.edit:hover {
+  color: #3a3A3a;
+}
+
+.delete:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-.main__todo-header,
-.main__add-element__new-task-label{
+.main__heading-title,
+.main__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
   border-bottom: 2px solid #333;
   padding: 30px 0 10px;
-  margin: 0 0 20px;
+  margin: 0;
   text-transform: uppercase;
-  display: block;
 }
 
-.main__incomplete-tasks__edit__input-task {
+.task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -99,37 +99,22 @@ h3 {
   color: #888;
 }
 
-.main__incomplete-tasks__edit > .task {
-  display: none;
-}
-
-.main__incomplete-tasks__edit__input-task:focus {
+.task:focus {
   color: #333;
 }
 
 /* New Task */
-.main-content__add-element__new-task-label {
+.main__label {
   display: block;
   margin: 0 0 20px;
 }
 
-.main__task-row-wrapper__input-task {
-  width: 420px;
-  margin: 0;
-  font-size: 18px;
-  line-height: 18px;
-  height: 19px;
-  padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
-  border-radius: 6px;
-  font-family: Lato, sans-serif;
-  color: #888;
-  margin-bottom: 22px;
+.main__input {
+  width: 415px;
 }
 
 /* Task list */
-.main__incomplete-tasks__edit {
+.main__incomplete-tasks > li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -138,48 +123,83 @@ h3 {
   align-items: center;
 }
 
-.main__incomplete-tasks__edit-mode > * {
+.main__completed-tasks > li {
+  overflow: hidden;
+  padding: 20px 0;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main__incomplete-tasks > li > * {
   vertical-align: middle;
 }
 
-.main__incomplete-tasks__edit__input-checkbox {
+.main__completed-tasks > li > * {
+  vertical-align: middle;
+}
+
+.main__incomplete-tasks > li > input[type="checkbox"] {
   margin: 0 10px;
 }
 
-.main__incomplete-tasks__edit > .main__incomplete-tasks__edit__label {
+.main__completed-tasks > li > input[type="checkbox"] {
+  margin: 0 10px;
+}
+
+.main__completed-tasks > li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.main__incomplete-tasks__edit__button-remove > .main__incomplete-tasks__edit__button-remove__img {
+.main__incomplete-tasks > li > label {
+  padding-left: 10px;
+  box-sizing: border-box;
+  font-size: 18px;
+  width: 226px;
+}
+
+.main__incomplete-tasks > li > input[type="text"] {
+  width: 226px;
+}
+
+.main__completed-tasks > li > input[type="text"] {
+  width: 226px;
+}
+
+.delete > img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.main__incomplete-tasks__edit__button-remove {
-  border: none;
-  background-color: #f8f8f8;
-}
-
-.main__incomplete-tasks__edit__button-remove > .main__incomplete-tasks__edit__button-remove__img:hover {
+.delete > img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-.main__incomplete-tasks > .main__incomplete-tasks__edit__label {
+.main__completed-tasks .main__completed-tasks > label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.main__incomplete-tasks__edit > .main__incomplete-tasks__edit__input-task {
-  display: inline-block;
-  width: 224px;
+.main__completed-tasks > li > input[type="text"] {
+  display: none;
 }
 
-.main__incomplete-tasks__edit > .main__incomplete-tasks__edit__label {
+.main__incomplete-tasks > li > input[type="text"] {
+  display: none;
+}
+
+.main__incomplete-tasks li.main__incomplete-tasks__edit-mode input[type="text"] {
+  display: inline-block;
+  width: 325px;
+}
+
+.main__incomplete-tasks li.main__incomplete-tasks__edit-mode label {
   display: none;
 }
